domain/src/main/java/com/example/domain/errors/AuthenticationException.kt
package com.example.domain.errors

class AuthenticationException(message: String) : Throwable(message)
